--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,8 @@
 </head>
 
 <body>
-    <div id="demo"></div>
+    <div id="html"></div>
+    <style id="css"></style>
     <script src="main.js"></script>
 </body>
 
