--- a/src/index.html
+++ b/src/index.html
@@ -7,10 +7,12 @@
      maximum-scale=1.0, user-scalable=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>zhangdeshou会动的简历</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <div id="html"></div>
+    <div id="div1"></div>
     <style id="css"></style>
     <script src="main.js"></script>
 </body>
